2013-04-14  Andrew Cohen  <cohen@bu.edu>

	* nnir.el (nnir-request-set-mark): Make sure we are in the right
	group.

2013-04-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-msg-mail): Make it avoid using posting styles
	corresponding to any existing group (Bug#14166).

2013-04-10  Andrew Cohen  <cohen@bu.edu>

	* nnir.el (number-sequence): No longer used.
	(nnir-request-set-mark): New function.
	(nnir-request-update-info): Improve marks updating.
	(nnir-request-scan): Don't duplicate marks updating.
	(gnus-group-make-nnir-group, nnir-run-imap, nnir-request-create-group):
	Use 'assq rather than 'assoc. Quote anonymous function.
	(nnir-request-group, nnir-close-group, gnus-summary-create-nnir-group):
	Use 'gnus-group-prefixed-p.
	(gnus-summary-create-nnir-group): Make sure server for method is open.

2013-04-04  Andrew Cohen  <cohen@bu.edu>

	* nnir.el (gnus-nnir-group-p): New function.
	(nnir-possibly-change-group): Use it.

	* gnus-msg.el (gnus-setup-message): Use it.

2013-04-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml.el (mml-minibuffer-read-description): Use `default' insted of
	`initial-input' for the argument name.
	Suggested by Stefan Monnier <monnier@iro.umontreal.ca>.

2013-04-03  Kevin Layer  <layer@known.net>  (tiny change)

	* mml.el (mml-minibuffer-read-description): Allow passing in a prefix
	(used by MH-E).

2013-04-01  Andrew Cohen  <cohen@bu.edu>

	* nnir.el (nnir-request-update-mark): Improve mark updating in original
	group.

	* gnus-msg.el (nnir-article-number, nnir-article-group): Autoload to
	fix compilation.

2013-03-31  Andrew Cohen  <cohen@bu.edu>

	* nnir.el (nnir-method-default-engines): And another typo.

2013-03-30  Andrew Cohen  <cohen@bu.edu>

	* nnir.el (nnir-method-default-engines): Fix typo.

2013-03-29  Andrew Cohen  <cohen@bu.edu>

	* nnir.el: Define 'number-sequence for xemacs.
	(gnus-summary-create-nnir-group): New function to create an nnir group
	from an nnir summary buffer based on the current query.